src/objects/Call_Center_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>ACD_Platform__c</fullName>
        <inlineHelpText>Platform name and version</inlineHelpText>
        <label>ACD Platform</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_workstations_do_not_leave_office__c</fullName>
        <label>Agent workstations do not leave office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Call_Duration__c</fullName>
        <label>Average Call Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Center__c</fullName>
        <description>Backup call center</description>
        <inlineHelpText>Call Center Contingency</inlineHelpText>
        <label>Backup Center</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Secure_Access_Control__c</fullName>
        <inlineHelpText>Strong badge or token based entry into the building and part of the building where our agents are located</inlineHelpText>
        <label>Building Secure Access Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSAT_Platform__c</fullName>
        <inlineHelpText>Platform name and version</inlineHelpText>
        <label>CSAT Platform</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Center_Address__c</fullName>
        <label>Call Center Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Center_Location__c</fullName>
        <label>Call Center Location</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Center_Management__c</fullName>
        <label>Call Center Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outsourced (OV)</fullName>
                </value>
                <value>
                    <fullName>Insourced (IV)</fullName>
                </value>
                <value>
                    <fullName>P&amp;G Inhouse (P)</fullName>
                </value>
                <value>
                    <fullName>P&amp;G Inhouse contractors (C)</fullName>
                </value>
                <value>
                    <fullName>Distributor (D)</fullName>
                </value>
                <value>
                    <fullName>ER (E)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Recording_System__c</fullName>
        <inlineHelpText>Platform name and version</inlineHelpText>
        <label>Call Recording System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Countries_Covered__c</fullName>
        <label>Countries Covered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Isle of Man</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Jamaica</fullName>
                </value>
                <value>
                    <fullName>Jan Mayen</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Jersey</fullName>
                </value>
                <value>
                    <fullName>Jordan</fullName>
                </value>
                <value>
                    <fullName>Juan de Nova Island</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Kiribati</fullName>
                </value>
                <value>
                    <fullName>Korea, North</fullName>
                </value>
                <value>
                    <fullName>Korea, South</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Kyrgyzstan</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Lebanon</fullName>
                </value>
                <value>
                    <fullName>Lesotho</fullName>
                </value>
                <value>
                    <fullName>Liberia</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Entry_System__c</fullName>
        <label>Data Entry System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Platform__c</fullName>
        <inlineHelpText>Platform name and version</inlineHelpText>
        <label>IVR Platform</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Covered__c</fullName>
        <label>Languages Covered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Chinese (simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (traditional)</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Esperanto</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Galician</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Agents__c</fullName>
        <description>Total number of agents working at the call center</description>
        <label>Number of Agents</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Supervisors__c</fullName>
        <description>Total number of supervisors working at the call center</description>
        <label>Number of Supervisors</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation_Hours__c</fullName>
        <inlineHelpText>Call center working hours</inlineHelpText>
        <label>Operation Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P_G_Site_Code__c</fullName>
        <label>P&amp;G Site Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_G_Vendor_Manager__c</fullName>
        <label>P&amp;G Vendor Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Hours__c</fullName>
        <label>Peak Hours</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>AAI</fullName>
                </value>
                <value>
                    <fullName>WE</fullName>
                </value>
                <value>
                    <fullName>CEEMEA</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>NEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_CTI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Computer Telephony Integration with Salesforce?</inlineHelpText>
        <label>SFDC CTI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <label>Services Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Contact_Email__c</fullName>
        <label>Site Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Telephone__c</fullName>
        <label>Site Contact Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <description>Site leader contact name</description>
        <inlineHelpText>Site leader contact name</inlineHelpText>
        <label>Site Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephony_System__c</fullName>
        <inlineHelpText>Platform name and version</inlineHelpText>
        <label>Telephony System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Calls_per_Month__c</fullName>
        <label>Total Calls per Month</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_per_Month__c</fullName>
        <label>Total Hours per Month</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPN_Needed__c</fullName>
        <inlineHelpText>VPN needed for remote access to vendor network</inlineHelpText>
        <label>VPN Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Call Center Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Call_Center_Location__c</columns>
        <columns>ACD_Platform__c</columns>
        <columns>Call_Recording_System__c</columns>
        <columns>SFDC_CTI__c</columns>
        <columns>Telephony_System__c</columns>
        <columns>Call_Center_Management__c</columns>
        <columns>Site_Contact__c</columns>
        <columns>Countries_Covered__c</columns>
        <columns>Languages_Covered__c</columns>
        <columns>Total_Calls_per_Month__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Americas</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Call_Center_Location__c</columns>
        <columns>Site_Contact__c</columns>
        <columns>Total_Calls_per_Month__c</columns>
        <columns>Number_of_Agents__c</columns>
        <columns>Number_of_Supervisors__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>NA,LA</value>
        </filters>
        <label>Americas</label>
    </listViews>
    <listViews>
        <fullName>Asia</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Call_Center_Location__c</columns>
        <columns>Countries_Covered__c</columns>
        <columns>Languages_Covered__c</columns>
        <columns>Number_of_Agents__c</columns>
        <columns>Number_of_Supervisors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AAI,GC,NEA</value>
        </filters>
        <label>Asia</label>
    </listViews>
    <listViews>
        <fullName>EMEA</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Call_Center_Location__c</columns>
        <columns>Countries_Covered__c</columns>
        <columns>Languages_Covered__c</columns>
        <columns>Total_Calls_per_Month__c</columns>
        <columns>Number_of_Agents__c</columns>
        <columns>Number_of_Supervisors__c</columns>
        <columns>Operation_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>WE,CEEMEA</value>
        </filters>
        <label>EMEA</label>
    </listViews>
    <nameField>
        <label>Call Center Company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Center Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>